# arcane-benchs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
arcaneloops/src/: ArcaneLoops.axl  ArcaneLoopsBench.config  ArcaneLoopsModule.cc  CMakeLists.txt  main.cc
qama/src/: CMakeLists.txt  QAMA.config  _clang-format  main.cc  structEnum.hh
qama/src/qs/: QS.axl  QSModule.cc  QSModule.hh
qama/src/rng/: RNG.axl  RNGService.hh
qama/src/sampling_mc/: SamplingMC.axl  SamplingMCModule.cc  SamplingMCModule.hh
qama/src/tracking_mc/: TrackingMC.axl  TrackingMCModule.cc  TrackingMCModule.hh
quicksilver/: CMakeLists.txt  Coral2_P1.inp  CycleTracking.cc  DirectionCosine.cc  DirectionCosine.hh  Doxyfile.bak  ExampleFull.arc  GlobalFccGrid.cc  Globals.hh  InitMC.axl  InitMCModule.cc  InitMCModule.hh  MCT.cc  MCT.hh  MC_Adjacent_Facet.cc  MC_Base_Particle.cc  MC_Base_Particle.hh  MC_Domain.cc  MC_Facet_Geometry.hh  MC_Fast_Timer.hh  MC_Location.cc  MC_Location.hh  MC_Particle.hh  MC_Particle_Buffer.cc  MC_Particle_Buffer.hh  MC_RNG_State.cc  MC_RNG_State.hh  MC_Segment_Outcome.cc  MC_SourceNow.cc  MC_SourceNow.hh  MC_Vector.hh  Makefile  MeshPartition.cc  NVTX_Range.hh  NuclearData.cc  NuclearData.hh  NuclearDataArc.cc  NuclearDataArc.hh  ParticleVault.cc  ParticleVault.hh  (+25 more)
quicksilver/arc_examples/: CTS2.arc  Coral2_P1.arc  Coral2_P2.arc  NonFlatXC.arc  homogeneousProblem.arc  no.collisions.arc  noFission.arc  scatteringOnly.arc
quicksilver/data/: CTS2.arc  Coral2_P1.arc  ExampleDefault.arc  ExampleFull.arc  NonFlatXC.arc  TestHuge.arc  TestLarge.arc  TestMedium.arc  TestSmall.arc  allAbsorb.arc  allEscape.arc  no.collisions.arc
quicksilver/data/CTS2/: CTS2_n1024.arc  CTS2_n128.arc  CTS2_n131072.arc  CTS2_n2048.arc  CTS2_n256.arc  CTS2_n4096.arc  CTS2_n512.arc  CTS2_n8192.arc  README.md
quicksilver/data/Coral2/: Coral2_P1_n1024.arc  Coral2_P1_n12.arc  Coral2_P1_n128.arc  Coral2_P1_n131072.arc  Coral2_P1_n2048.arc  Coral2_P1_n256.arc  Coral2_P1_n4096.arc  Coral2_P1_n512.arc  Coral2_P1_n8192.arc  Coral2_P2_n1024.arc  Coral2_P2_n128.arc  Coral2_P2_n131072.arc  Coral2_P2_n2048.arc  Coral2_P2_n256.arc  Coral2_P2_n4096.arc  Coral2_P2_n512.arc  Coral2_P2_n8192.arc  README.md
quicksilver/data/Strong/: README.md  Strong_n1024.arc  Strong_n128.arc  Strong_n2048.arc  Strong_n2520.arc  Strong_n256.arc  Strong_n512.arc
quicksilver/data/Strong/input_for_qs/: Strong.inp
quicksilver/data/Unbal/: README.md  Unbal_README.md
quicksilver/data/Unbal/Unbal16_1/: Unbal16_1_n128.arc  Unbal16_1_n16.arc  Unbal16_1_n16384.arc  Unbal16_1_n2048.arc  Unbal16_1_n32.arc  Unbal16_1_n32768.arc  Unbal16_1_n512.arc
quicksilver/data/Unbal/Unbal16_16/: Unbal16_16_n128.arc  Unbal16_16_n16.arc  Unbal16_16_n16384.arc  Unbal16_16_n2048.arc  Unbal16_16_n32.arc  Unbal16_16_n32768.arc  Unbal16_16_n4.arc  Unbal16_16_n512.arc
quicksilver/data/Unbal/Unbal16_4/: Unbal16_4_n128.arc  Unbal16_4_n16.arc  Unbal16_4_n16384.arc  Unbal16_4_n2048.arc  Unbal16_4_n32.arc  Unbal16_4_n32768.arc  Unbal16_4_n512.arc
quicksilver/data/Unbal/Unbal32_1/: Unbal32_1_n128.arc  Unbal32_1_n16384.arc  Unbal32_1_n2048.arc  Unbal32_1_n32.arc  Unbal32_1_n32768.arc  Unbal32_1_n512.arc
quicksilver/data/Unbal/Unbal32_16/: Unbal32_16_n128.arc  Unbal32_16_n16384.arc  Unbal32_16_n2048.arc  Unbal32_16_n32.arc  Unbal32_16_n32768.arc  Unbal32_16_n512.arc  Unbal32_16_n8.arc
quicksilver/data/Unbal/Unbal32_4/: Unbal32_4_n128.arc  Unbal32_4_n16384.arc  (+4 more)
quicksilver/data/Unbal16/: Unbal16.arc
quicksilver/data/Unbal32/: Unbal32.arc
quicksilver/data/Unbal4/: Unbal4.arc
quicksilver/data/qs_original/: NonFlatXC.arc  allAbsorb.arc  allEscape.arc  homogeneousProblem.arc  no.collisions.arc  noFission.arc  scatteringOnly.arc
quicksilver/data/tests/: ExampleFull.arc  TestHuge.arc  TestLarge.arc  TestMedium.arc  TestSmall.arc
quicksilver/reference_files/CTS2_n256/: Results_P0.csv
quicksilver/reference_files/CTS2_n4096/: Results_P0.csv
quicksilver/reference_files/Coral2_P1_n1024/: Results_P0.csv
quicksilver/reference_files/Coral2_P1_n128/: Results_P0.csv
quicksilver/reference_files/Coral2_P1_n2048/: Results_P0.csv
quicksilver/reference_files/Coral2_P1_n256/: Results_P0.csv
quicksilver/reference_files/Coral2_P1_n4096/: Results_P0.csv
quicksilver/reference_files/Coral2_P1_n512/: Results_P0.csv
quicksilver/reference_files/Coral2_P2_n1024/: Results_P0.csv
quicksilver/reference_files/Coral2_P2_n2048/: Results_P0.csv
quicksilver/reference_files/Coral2_P2_n256/: Results_P0.csv
quicksilver/reference_files/ExampleFull/: Results_P0.csv
quicksilver/reference_files/Strong_n2048/: Results_P0.csv
quicksilver/reference_files/Strong_n256/: Results_P0.csv
quicksilver/reference_files/Strong_n512/: Results_P0.csv
quicksilver/reference_files/TestHuge/: Results_P0.csv
quicksilver/reference_files/TestLarge/: Results_P0.csv
quicksilver/reference_files/TestMedium/: Results_P0.csv
quicksilver/reference_files/TestSmall/: Results_P0.csv
quicksilver/src/: CMakeLists.txt  CsvOutput.axl  CsvOutputService.cc  CsvOutputService.hh  ISimpleOutput.hh  MC_Facet_Geometry.hh  MC_RNG_State.cc  MC_RNG_State.hh  NuclearData.cc  NuclearData.hh  PhysicalConstants.hh  QS.axl  QSModule.cc  QSModule.hh  Quicksilver.config  SamplingMC.axl  SamplingMCModule.cc  SamplingMCModule.hh  TrackingMC.axl  TrackingMCModule.cc  TrackingMCModule.hh  main.cc  structEnum.hh
quicksilver/src/qs/: QS.axl  QSModule.cc  QSModule.hh
quicksilver/src/rng/: IRandomNumberGenerator.hh  RNG.axl  RNGService.cc  RNGService.hh
quicksilver/src/sampling_mc/: SamplingMC.axl  SamplingMCModule.cc  SamplingMCModule.hh
quicksilver/src/simple_table_output/: CsvOutputService.cc  CsvOutputService.hh
quicksilver/src/tracking_mc/: NuclearData.cc  NuclearData.hh  TrackingMC.axl  TrackingMCModule.cc  TrackingMCModule.hh
simple_eulerian_cfd/: CMakeLists.txt  SimpleEulerianCFD_NumArray2D.cc  SimpleEulerianCFD_Original.cc  cartesian1.arc  main.cc
synchronize/src/: CMakeLists.txt  Synchronize.arc  Synchronize.axl  Synchronize.config  Synchronize.lb.arc  SynchronizeModule.cc  main.cc
(+171 files in other folders)
